--- a/docs_extra/index.mdx
+++ b/docs_extra/index.mdx
@@ -2,7 +2,6 @@
 sidebar: false
 search: false
 navbar: true
-base: https://nduepptfsgpmdepcwna5tatdou.apigateway.ap-mumbai-1.oci.customer-oci.com/pdf-gen/v1
 ---
 import Endpoints from "/src/components/Endpoints"
 import Parameter from "/src/components/Parameter"
@@ -99,20 +98,6 @@ curl --request POST \
 }'
 ```
 
-```json title="200 OK"
-{
-  "apiKey": "7hWU*****************************CE5IZFFJxI",
-  "message": "Logged in successfully",
-  "userId": "5"
-}
-```
-
-```json title="401 Unauthorized"
-{
-  "message": "Invalid credentials"
-}
-```
-
 ---
 
 ### Sign-out
@@ -144,26 +129,6 @@ The API uses standard HTTP status codes to indicate the result of API requests.
     - **message**: A human-readable description of the error.
     - **details**: Additional information about the error (if available).
 
-```json title="403 Forbidden"
-{
-  "message": "Forbidden",
-  "code": 403
-}
-```
-
-```json title="404 Not Found"
-{
-  "message": "Not Found",
-  "code": 404
-}
-```
-
-```json title="401 Unauthorized"
-{
-  "message": "Unauthorized access"
-}
-```
-
 ## Templates
 
 
@@ -179,11 +144,6 @@ The API uses standard HTTP status codes to indicate the result of API requests.
       method: "POST",
       url: "/upload_template",
     },
-    {
-      id: "generate-template-pdf",
-      method: "POST",
-      url: "/generate",
-    },
   ]}
 />
 
@@ -197,21 +157,14 @@ POST /upload_template
 Creates a new template file or replaces an existing one.
 
 **Parameters:**
-
 <Parameter name="templateName" type="string" required/>
-
 The name of the template.
-
 <Parameter name="templateFile" type="HTML file" required/>
-
 The file to upload.
-
 <Parameter name="filetype" type="JSON file" required/>
-
 The schema to validate the data.
 
 ```sh title="POST /upload_template"
-# using cURL
 curl -X POST https://nduepptfsgpmdepcwna5tatdou.apigateway.ap-mumbai-1.oci.customer-oci.com/pdf-gen/v1/upload_template \
   -H "X-Api-Key: YOUR_API_KEY" \
   -H "X-Client-Token: YOUR_CLIENT_TOKEN" \
@@ -228,6 +181,9 @@ curl -X POST https://nduepptfsgpmdepcwna5tatdou.apigateway.ap-mumbai-1.oci.custo
 ```
 
 ---
+### Update a template
+
+---
 ### List all templates
 
 Retrieves a list of templates.
@@ -238,12 +194,15 @@ Retrieves a list of templates.
 
 The type of file to retrieve, either `html` or `json`.
 
+
+
+
 ---
 
 An object with `list` property that contains an array of strings
 
 ```sh title="GET /templates"
-curl /templates \
+curl -X GET https://api.example.com/v1/templates?filetype=html \
   -H "X-Api-Key: YOUR_API_KEY" \
   -H "X-Client-Token: YOUR_CLIENT_TOKEN" \
 ```
@@ -259,107 +218,5 @@ curl /templates \
 ---
 ### Generate template PDF
 
-```sh title="POST /generate"
-curl --request POST \
-  --url /generate \
-  --header 'x-api-key: {{api_key}}' \
-  --header 'x-client-token: {{client_token}}' \
-  --data '{
-  "templateName": "main_v1",
-  "title": "Main Page",
-  "content": {
-    "multipleAuthorSection": {
-      "details": [
-        {
-          "tableHeading": "George Martin",
-          "tableContent": [
-            {
-              "rowLabel": "name",
-              "rowValue": "george r martin"
-            }
-          ]
-        },
-        {
-          "tableHeading": "Stephen King",
-          "tableContent": [
-            {
-              "rowLabel": "name",
-              "rowValue": "stephen king"
-            }
-          ]
-        }
-      ]
-    }
-  }
-}'
-```
-
-```json title="422 Unprocessable Entity"
-{
-  "error": "Schema validation failed",
-  "errorDetail": "'address' is a required property"
-}
-```
-
-```text title="200 OK"
-%PDF-1.3
-<<
-/Size 30
-/Root 1 0 R
-...
-/Info 28 0 R
-/ID [ <6236663061386633313561346537303661303364303137373463616465663437> <6236663061386633313561346537303661303364303137373463616465663437> ]
-/Encrypt 29 0 R
->>
-startxref
-30068
-%%EOF
-```
 ---
 ### Generate template PDF and protect
-
-```sh title="POST /generate"
-curl --request POST \
-  --url /generate \
-  --header 'x-api-key: {{api_key}}' \
-  --header 'x-client-token: {{client_token}}' \
-  --data '{
-  "templateName": "main_v1",
-  "title": "Main Page",
-  "passwordProtected": true,
-  "params": [
-    {
-      "key": "panNumber",
-      "value": "QWDPL2424L"
-    },
-    {
-      "key": "leadNo",
-      "value": "23401_20241224"
-    }
-  ],
-  "content": {
-    "multipleAuthorSection": {
-      "details": [
-        {
-          "tableHeading": "George Martin",
-          "tableContent": [
-            {
-              "rowLabel": "name",
-              "rowValue": "george r martin"
-            }
-          ]
-        },
-        {
-          "tableHeading": "Stephen King",
-          "tableContent": [
-            {
-              "rowLabel": "name",
-              "rowValue": "stephen king"
-            }
-          ]
-        }
-      ]
-    }
-  }
-}'
-```
